<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_Dark"
    android:key="ime_settings"
    android:title="@string/ime_settings">

    <PreferenceCategory

        >
        <Preference
            android:defaultValue="@string/preference_main_settings_language_default"
            android:dialogTitle="@string/preference_main_settings_language_dialog_title"
            android:key="@string/preference_main_settings_language_key"
            android:summary="@string/preference_main_settings_language_summary"
            android:title="@string/preference_main_settings_language_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_recognizer_separate_letters_key"
            android:persistent="true"
            android:summaryOff="@string/preference_recognizer_separate_letters_summary"
            android:summaryOn="@string/preference_recognizer_separate_letters_summary"
            android:title="@string/preference_recognizer_separate_letters_on" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_recognizer_single_word_only_key"
            android:persistent="true"
            android:summaryOff="@string/preference_recognizer_single_word_only_summary"
            android:summaryOn="@string/preference_recognizer_single_word_only_summary"
            android:title="@string/preference_recognizer_single_word_only_on" />
    </PreferenceCategory>
</PreferenceScreen>
